# AudioPluginHost

./: .gitignore  AudioPluginHost.jucer  CMakeLists.txt  README.md
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h
Source/: GpioBackend.cpp  GpioBackend.h  HardwareCalibration.cpp  HardwareCalibration.h  HardwareInputService.cpp  HardwareInputService.h  HostStartup.cpp
Source/Plugins/: InternalPlugins.cpp  PluginGraph.cpp  PluginGraph.h
Source/Plugins/Fx/: AnalogDelay.h  BigMuffFuzz.h  ChorusCE2.h  FxCommon.h  GainBoost.h  GainProcessor.h  Phase90Plugin.h  PitchShifter.h  RatDistortion.h  Tuner.h
Source/UI/: GraphEditorPanel.cpp  GraphEditorPanel.h  GraphEditorPanel_BACKUP.cpp  MainHostWindow.cpp  MainHostWindow.h  PluginWindow.h
